--- a/DictionaryPatterns/nbproject/private/private.properties
+++ b/DictionaryPatterns/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Documents and Settings\\NguenKD\\Application Data\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\DAT\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
